force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/ucinn_ascendv2__Hard_and_Soft_Credit__c.object-meta.xml
<CustomObject>
    <description>Hard credit is credit given to the constituent/organization directly making the donation (the one responsible for giving the money/object of value). Soft credit is credit given to the constituent/organization indirectly making the donation (did not give the money).</description>
    <label>Hard and Soft Credit</label>
    <nameField>
        <label>Hard and Soft Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hard and Soft Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>