force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Annual_Giving_Projection__c.field-meta.xml
<CustomField>
    <fullName>Annual_Giving_Projection__c</fullName>
    <formula>ucinn_ascendv2__Opportunity__r.Annual_Giving_Projection__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Giving Projection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>