force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Designation_Fund_Department__c.field-meta.xml
<CustomField>
    <fullName>Designation_Fund_Department__c</fullName>
    <formula>ucinn_ascendv2__Designation__r.ucinn_ascendv2__X1_Department_Name_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation Fund Department</label>
    <type>Text</type>
</CustomField>