force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Hard_Credit_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Hard_Credit_Donor_ID__c</fullName>
    <formula>if (text(ucinn_ascendv2__Credit_Type__c) = &apos;Hard&apos;, if(ucinn_ascendv2__Contact__c!= null, ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c,  ucinn_ascendv2__Account__r.ucinn_ascendv2__Donor_ID__c ),
if(ucinn_ascendv2__Hard_Credit_Recipient_Contact__c!=null, ucinn_ascendv2__Hard_Credit_Recipient_Contact__r.ucinn_ascendv2__Donor_ID__c, ucinn_ascendv2__Hard_Credit_Recipient_Account__r.ucinn_ascendv2__Donor_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hard Credit Donor ID</label>
    <type>Text</type>
</CustomField>