force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Is_Giving_Summary_Outdated_ISUF__c.field-meta.xml
<CustomField>
    <fullName>Is_Giving_Summary_Outdated_ISUF__c</fullName>
    <formula>OR(
OR(
AND(
NOT(ISBLANK(ucinn_ascendv2__Contact__c)),
ISBLANK(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c),
ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c),
AND(
NOT(ISBLANK(ucinn_ascendv2__Contact__c)),
ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c,
ucinn_ascendv2__Contact__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c &lt; ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Completed__c)),
OR(
AND(
NOT(ISBLANK(ucinn_ascendv2__Account__c)),
ISBLANK(ucinn_ascendv2__Account__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c),
ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c),
AND(
NOT(ISBLANK(ucinn_ascendv2__Account__c)),
ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c,
ucinn_ascendv2__Account__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c &lt; ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Completed__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Giving Summary Outdated ISUF</label>
    <type>Checkbox</type>
</CustomField>