force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Is_User_College_Department__c.field-meta.xml
<CustomField>
    <fullName>Is_User_College_Department__c</fullName>
    <description>If Department is present , use that to match , else use only college</description>
    <formula>If (
    TEXT($User.Campus_Department__c) = &apos;&apos;, 
	 If (Is_User_College__c, true, false), 
	 If (Is_User_Department__c &amp;&amp; Is_User_College__c,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User College Department</label>
    <type>Checkbox</type>
</CustomField>