force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Is_User_Department__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Department__c</fullName>
    <formula>If(TEXT($User.Campus_Department__c) = Designation_Fund_Department__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Department</label>
    <type>Checkbox</type>
</CustomField>