force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/IsAdjustment__c.field-meta.xml
<CustomField>
    <fullName>IsAdjustment__c</fullName>
    <formula>ucinn_ascendv2__Opportunity__r.ucinn_ascendv2__Adjustment_Session__c != null</formula>
    <label>Adjustment</label>
    <type>Checkbox</type>
</CustomField>