force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ISUF_Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Gift_Type__c</fullName>
    <formula>If(ISBLANK(TEXT(ucinn_ascendv2__Payment__r.ucinn_ascendv2__Transaction_Type__c)),
 ucinn_ascendv2__Opportunity__r.RecordType.Name,
 if(and(ucinn_ascendv2__Opportunity__r.RecordType_DeveloperName__c =&apos;Pledge&apos;, ucinn_ascendv2__Opportunity__r.ucinn_ascendv2__Is_Planned_Gift__c = false), &apos;Pledge Payment&apos;, 
if(and(ucinn_ascendv2__Opportunity__r.RecordType_DeveloperName__c =&apos;Pledge&apos;, ucinn_ascendv2__Opportunity__r.ucinn_ascendv2__Is_Planned_Gift__c = true), &apos;Planned Gift Payment&apos;, 
TEXT(ucinn_ascendv2__Payment__r.ucinn_ascendv2__Transaction_Type__c))))</formula>
    <label>ISUF Gift Type</label>
    <type>Text</type>
</CustomField>