force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Name_of_Hard_Credit__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Hard_Credit__c</fullName>
    <formula>if (text(ucinn_ascendv2__Credit_Type__c) = &apos;Hard&apos;, if(ucinn_ascendv2__Contact__c!= null, ucinn_ascendv2__Contact__r.FirstName + &quot; &quot; + ucinn_ascendv2__Contact__r.LastName, ucinn_ascendv2__Account__r.Name), 
if(ucinn_ascendv2__Hard_Credit_Recipient_Contact__c!=null, ucinn_ascendv2__Hard_Credit_Recipient_Contact__r.FirstName + &quot; &quot; + ucinn_ascendv2__Hard_Credit_Recipient_Contact__r.LastName, ucinn_ascendv2__Hard_Credit_Recipient_Account__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Hard Credit</label>
    <type>Text</type>
</CustomField>