force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Session_Approved__c.field-meta.xml
<CustomField>
    <fullName>Session_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session Approved</label>
    <type>Checkbox</type>
</CustomField>