force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/Soft_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Type__c</fullName>
    <inlineHelpText>Select the soft credit type from the option below.</inlineHelpText>
    <label>Soft Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A: Athletic GIKs</fullName>
            </value>
            <value>
                <fullName>M: Matching Gift</fullName>
            </value>
            <value>
                <fullName>P: Permanent</fullName>
            </value>
            <value>
                <fullName>R: Reiman Gardens</fullName>
            </value>
            <value>
                <fullName>V: Vet Med Preceptorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>