force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hard and Soft Credits (Organization)</relationshipLabel>
    <relationshipName>Hard_and_Soft_Credits_Account</relationshipName>
    <type>Lookup</type>
</CustomField>