force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Amount_Before_Written_Off_Cancelled_Void__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Before_Written_Off_Cancelled_Void__c</fullName>
    <label>Amount Before Written Off/Cancelled/Void</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>