force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Formula__c</fullName>
    <formula>IF ( CONTAINS( ucinn_ascendv2__Gift_Type_Formula__c, &apos;Payment&apos;),   ucinn_ascendv2__Payment__r.ucinn_ascendv2__Face_Value__c, ucinn_ascendv2__Opportunity__r.Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>