force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hard and Soft Credits (Constituent)</relationshipLabel>
    <relationshipName>Hard_and_Soft_Credits_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>