force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Contact_Name_and_Donor_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Name_and_Donor_ID_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Account__r.Name), ucinn_ascendv2__Contact__r.FirstName + &quot; &quot; + ucinn_ascendv2__Contact__r.LastName + &quot; &quot; + ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c , ucinn_ascendv2__Account__r.Name + &quot; &quot; + ucinn_ascendv2__Account__r.ucinn_ascendv2__Donor_ID__c)</formula>
    <label>Constituent Name and Donor ID</label>
    <type>Text</type>
</CustomField>