force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Amount__c</fullName>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>