force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Credit_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_ID__c</fullName>
    <label>Credit ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>