force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Credit_Name_and_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Name_and_Role__c</fullName>
    <label>Credit Name and Role (DEPRECATED)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>