force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Credit_Subtype__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Subtype__c</fullName>
    <label>Credit Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCO</fullName>
            </value>
            <value>
                <fullName>Board / Trustee</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Recognition</fullName>
            </value>
            <value>
                <fullName>Spousal</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>