force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Type__c</fullName>
    <label>Credit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Recognition Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>