force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Default_Spouse_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Spouse_Soft_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flags a situation where the soft credit was created automatically, without the user explicitly adding the soft credit on the Gift Processing page.</description>
    <label>Default Soft Credit</label>
    <type>Checkbox</type>
</CustomField>