force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Designation_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Code_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation_Detail__r.ucinn_ascendv2__Designation__r.Name</formula>
    <label>Designation Code</label>
    <type>Text</type>
</CustomField>