force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__G_L_Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__G_L_Account_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation_Detail__r.ucinn_ascendv2__G_L_Account__c</formula>
    <label>G / L Account</label>
    <type>Text</type>
</CustomField>