force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Gift_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_No_Formula__c</fullName>
    <formula>IF (
      (CONTAINS(ucinn_ascendv2__Gift_Type_Formula__c, &apos;Payment&apos;)
       &amp;&amp; ucinn_ascendv2__Gift_Type_Formula__c != &apos;Matching Gift Payment&apos;),

          ucinn_ascendv2__Payment__r.Name,

          IF (
                ISBLANK( ucinn_ascendv2__Opportunity__r.Name ),

                    ucinn_ascendv2__Opportunity__r.ucinn_ascendv2__Pledge_Gift_ID_Formula__c,
                    ucinn_ascendv2__Opportunity__r.Name
          )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift No Formula</label>
    <type>Text</type>
</CustomField>