force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Gift_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Type_Formula__c</fullName>
    <formula>If(ISBLANK(TEXT(ucinn_ascendv2__Payment__r.ucinn_ascendv2__Transaction_Type__c)),ucinn_ascendv2__Opportunity__r.RecordType.Name,TEXT(ucinn_ascendv2__Payment__r.ucinn_ascendv2__Transaction_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Type</label>
    <type>Text</type>
</CustomField>