force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Hard_and_Soft_Credit_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_and_Soft_Credit_Name_Auto_Number__c</fullName>
    <displayFormat>Credit-{YY}{MM}{DD}-{0000}</displayFormat>
    <label>Hard and Soft Credit Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>