force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Hard_Credit_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_Credit_Formula__c</fullName>
    <formula>IF ( ISPICKVAL(ucinn_ascendv2__Credit_Type__c,&apos;Hard&apos;), IF(ISBLANK( ucinn_ascendv2__Contact__r.ucinn_ascendv2__First_and_Last_Name_Formula__c ),ucinn_ascendv2__Account__r.Name ,ucinn_ascendv2__Contact__r.ucinn_ascendv2__First_and_Last_Name_Formula__c) , IF ( ISBLANK(ucinn_ascendv2__Hard_Credit_Recipient_Contact__r.ucinn_ascendv2__First_and_Last_Name_Formula__c ), IF (ISBLANK( ucinn_ascendv2__Hard_Credit_Recipient_Account__r.Name ), ucinn_ascendv2__Name_of_Creditee_Formula__c, ucinn_ascendv2__Hard_Credit_Recipient_Account__r.Name) , ucinn_ascendv2__Hard_Credit_Recipient_Contact__r.ucinn_ascendv2__First_and_Last_Name_Formula__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hard Credit Formula</label>
    <type>Text</type>
</CustomField>