force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Hard_Credit_Recipient_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_Credit_Recipient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hard Credit Recipient - Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hard and Soft Credits (Hard Credit Recipient - Organization)</relationshipLabel>
    <relationshipName>Hard_and_Soft_Credits_Hard_Cr_Rcpt_Acct</relationshipName>
    <type>Lookup</type>
</CustomField>