force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Hard_Credit_Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_Credit_Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hard Credit Recipient - Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hard and Soft Credits (Hard Credit Recipient - Constituent)</relationshipLabel>
    <relationshipName>Hard_and_Soft_Credits_Hard_Cr_Rcpt_Cont</relationshipName>
    <type>Lookup</type>
</CustomField>