force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Is_Deceased_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Deceased_Formula__c</fullName>
    <formula>NOT(ISBLANK( ucinn_ascendv2__Contact__r.ucinn_ascendv2__Deceased_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Deceased</label>
    <type>Checkbox</type>
</CustomField>