force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Is_Giving_Summary_Outdated__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Giving_Summary_Outdated__c</fullName>
    <description>Is checked if the Giving Summary is outdated based on the last time it was updated</description>
    <formula>OR(
 OR(
   AND(
     NOT(ISBLANK(ucinn_ascendv2__Contact__c)),
     ISBLANK(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c),
     ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c),
   AND(
     NOT(ISBLANK(ucinn_ascendv2__Contact__c)),
     ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c,
     ucinn_ascendv2__Contact__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c &lt; ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Completed__c)),
 OR(
   AND(
     NOT(ISBLANK(ucinn_ascendv2__Account__c)),
     ISBLANK(ucinn_ascendv2__Account__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c),
     ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c),
   AND(
     NOT(ISBLANK(ucinn_ascendv2__Account__c)),
     ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c,
     ucinn_ascendv2__Account__r.ucinn_ascendv2__Giving_Summary_Last_Updated__c &lt; ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Completed__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is checked if the Giving Summary is outdated based on the last time it was updated</inlineHelpText>
    <label>Is Giving Summary Outdated</label>
    <type>Checkbox</type>
</CustomField>