force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Is_Ready_for_G_L_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Ready_for_G_L_Formula__c</fullName>
    <description>Used to calculate FY giving to make sure session is closed and approved when considering hard/soft credits.</description>
    <formula>ucinn_ascendv2__Session__r.ucinn_ascendv2__Is_Ready_for_G_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ready for G / L</label>
    <type>Checkbox</type>
</CustomField>