force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Name_of_Creditee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Name_of_Creditee_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Account__r.Name), ucinn_ascendv2__Contact__r.FirstName + &quot; &quot; + ucinn_ascendv2__Contact__r.LastName, ucinn_ascendv2__Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Creditee</label>
    <type>Text</type>
</CustomField>