force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge / Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Hard and Soft Credits</relationshipLabel>
    <relationshipName>Hard_and_Soft_Credits_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>