force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Pledge_Gift_Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Gift_Stage_Formula__c</fullName>
    <description>Used to calculate FY giving to make sure pledge/gift is not adjusted when considering hard/soft credits.</description>
    <formula>TEXT(ucinn_ascendv2__Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge / Gift Stage</label>
    <type>Text</type>
</CustomField>