force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Receipt_Number__c</fullName>
    <label>Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>