force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Auto Renewing Membership</fullName>
            </value>
            <value>
                <fullName>Auto Renewing Membership Payment</fullName>
            </value>
            <value>
                <fullName>Installment Based Membership</fullName>
            </value>
            <value>
                <fullName>Installment Based Membership Payment</fullName>
            </value>
            <value>
                <fullName>Recurring Gift</fullName>
            </value>
            <value>
                <fullName>Recurring Gift Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>