force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/fields/ucinn_ascendv2__Trustee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Trustee_Formula__c</fullName>
    <formula>IF(OR(CONTAINS(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Primary_Contact_Type__c, &quot;Trustee&quot;), CONTAINS( ucinn_ascendv2__Contact__r.ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Primary_Contact_Type__c, &quot;Trustee&quot;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trustee</label>
    <type>Checkbox</type>
</CustomField>