force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/listViews/Copy_of_my_list_view.listView-meta.xml
<ListView>
    <fullName>Copy_of_my_list_view</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Credit_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ucinn_ascendv2__Credit_Type__c</columns>
    <columns>IsAdjustment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Opportunity__c</field>
        <operation>equals</operation>
        <value>PN3792313AAA</value>
    </filters>
    <label>Hard credits with constituent filter</label>
</ListView>