force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/listViews/Soft_Credit_Removal.listView-meta.xml
<ListView>
    <fullName>Soft_Credit_Removal</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Credit_Date_Formula__c</columns>
    <columns>ucinn_ascendv2__Credit_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ucinn_ascendv2__Credit_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Credit_Type__c</field>
        <operation>equals</operation>
        <value>Soft</value>
    </filters>
    <filters>
        <field>Donor_ID__c</field>
        <operation>equals</operation>
        <value>900600561</value>
    </filters>
    <label>Soft Credit Removal</label>
</ListView>