force-app/main/default/objects/ucinn_ascendv2__Hard_and_Soft_Credit__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Gift_Type_Formula__c</columns>
    <columns>ucinn_ascendv2__Opportunity__c</columns>
    <columns>ucinn_ascendv2__Credit_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>